@@ -3,3 +3,10 @@ NEWS since Mercury release 0.8:
 
 * We've added a new predicate to the Mercury standard library:
 	bag__count_value/3.	
+
+* The extras distribution now includes support for dynamic linking.
+
+  The interface is a based on the C functions dlopen(), dlsym(), and co.,
+  which are supported by most modern Unix systems.
+  See the files in extras/dynamic_linking for details.
+
